// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен корректно отрендериться 1`] = `
<DealerBreadcrumbs
  dispatch={[Function]}
  items={
    Array [
      Object {
        "linkParams": Array [
          "listing",
          Object {},
        ],
        "text": "Продажа автомобилей",
      },
      Object {
        "linkParams": Array [
          "dealers-listing",
          Object {
            "section": "all",
          },
          Object {
            "geo": Object {
              "gidsInfo": Array [],
            },
          },
        ],
        "text": "Все дилеры ",
      },
      Object {
        "text": "Major",
      },
    ]
  }
/>
`;

exports[`должен корректно отрендериться для мобильного 1`] = `
<DealerBreadcrumbs
  dispatch={[Function]}
  isMobile={true}
  items={
    Array [
      Object {
        "linkParams": Array [
          "listing",
          Object {},
        ],
        "text": "Продажа автомобилей",
      },
      Object {
        "linkParams": Array [
          "dealers-listing",
          Object {
            "section": "all",
          },
          Object {
            "geo": Object {
              "gidsInfo": Array [],
            },
          },
        ],
        "text": "Все дилеры ",
      },
      Object {
        "text": "Major",
      },
    ]
  }
/>
`;
